REGRESSION (r244557): Leak of WKNSString in WTR::runOpenPanel() while running WebKit layout tests <https://webkit.org/b/198538> <rdar://problem/51407719>

Reviewed by Darin Adler.

* WebKitTestRunner/TestController.cpp:
(WTR::runOpenPanel): Use adoptWK() to fix the leak.


Canonical link: https://commits.webkit.org/212544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246085 268f45cc-cd09-0410-ab3c-d52691b4dbfc